--- a/src/main/resources/static/css/login.css
+++ b/src/main/resources/static/css/login.css
@@ -264,3 +264,19 @@ a.list-group-item .vs-title {
     WIDTH: 97%;
     text-transform: uppercase;
 }
+
+#login-naver-btn {
+    border: none;
+    border-radius: 12px;
+    cursor: pointer;
+    font-size: 0.9rem;
+    font-weight: bold;
+    letter-spacing: 0.1rem;
+    padding: 0.8rem 2.5rem;
+    transition: transform 80ms ease-in;
+    background-color: #2DB400;
+    color: #FFFFFF;
+    margin-top: 20px;
+    WIDTH: 97%;
+    text-transform: uppercase;
+}
