#5 FEAT : 로그인 페이지에 메인 페이지로 이동하는 아이콘 추가

--- a/src/main/resources/templates/login-page.html
+++ b/src/main/resources/templates/login-page.html
@@ -19,9 +19,19 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Jua&display=swap" rel="stylesheet">
     <title>Elephant</title>
+
+    <link rel="icon" href="https://cdn-icons-png.flaticon.com/128/1864/1864497.png" />
+
 </head>
 
 <body>
+<div>
+    <a href="/">
+        <img src="https://cdn-icons-png.flaticon.com/128/1864/1864497.png" alt="Button Icon" style="
+    width: 70px;
+">
+    </a>
+</div>
 
 <div class="container left-panel-active">
     <!-- Sign Up -->
