--- a/src/main/resources/templates/chat.html
+++ b/src/main/resources/templates/chat.html
@@ -116,23 +116,12 @@
       min-height: 38px;
     }
 
-    button.default {
-      background-color: #e8e8e8;
-      color: #333;
-      box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.12);
-    }
-
     button.primary {
-      background-color: #128ff2;
+      background-color: #a482d1;
       box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.12);
       color: #fff;
     }
 
-    button.accent {
-      background-color: #ff4743;
-      box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.12);
-      color: #fff;
-    }
 
     /* 스크롤 속성 */
     #messageArea {
@@ -195,8 +184,24 @@
       height: calc(100% - 150px);
     }
 
-    #chat-page ul::-webkit-scrollbar {
 
+    #chat-page ul::-webkit-scrollbar {
+      margin-left: 5px;
+      width: 6px;
+    }
+
+    #chat-page ul::-webkit-scrollbar-track {
+      background-color: transparent;
+    }
+
+    #chat-page ul::-webkit-scrollbar-thumb {
+      border-radius: 2px;
+      background-color: #fff598;
+    }
+
+    #chat-page ul::-webkit-scrollbar-button {
+      width: 0;
+      height: 0;
     }
 
     #chat-page #messageForm {
@@ -292,6 +297,7 @@
     #messageForm .input-group input {
       float: left;
       width: calc(100% - 85px);
+      border-radius: 10px;
     }
 
     #messageForm .input-group button {
@@ -299,6 +305,7 @@
       width: 80px;
       height: 38px;
       margin-left: 5px;
+      border-radius: 10px;
     }
 
     .chat-header {
@@ -395,11 +402,11 @@
 <div id="chat-page" class="hidden">
   <div class="chat-container">
     <div class="chat-header">
-      <h2 th:text="${board.title}"></h2>
+      <h2 th:text="${board.title}">Chat</h2>
     </div>
-<!--    <div class="connecting">-->
-<!--      Connecting...-->
-<!--    </div>-->
+    <!--    <div class="connecting">-->
+    <!--      Connecting...-->
+    <!--    </div>-->
     <ul id="messageArea">
 
     </ul>
@@ -420,193 +427,193 @@
 </body>
 
 <script>
-    // console.log = function() {};
-    // 이걸 쓰면 콘솔에서 아무런 내역이 출력되지 않는다고 한다.. 진짜인가;
+  // console.log = function() {};
+  // 이걸 쓰면 콘솔에서 아무런 내역이 출력되지 않는다고 한다.. 진짜인가;
 
-    // https://m.blog.naver.com/qjawnswkd/222283176175
-    'use strict';
+  // https://m.blog.naver.com/qjawnswkd/222283176175
+  'use strict';
 
-    var username = '[[${username}]]';
-    var nickname = '[[${nickname}]]';
+  var username = '[[${username}]]';
+  var nickname = '[[${nickname}]]';
 
-    let url = window.location.href;
-    let id = url.replace("http://localhost:8080/api/chat/", "");
-    var chatRoomId = id;
+  let url = window.location.href;
+  let id = url.replace("http://localhost:8080/api/chat/", "");
+  var chatRoomId = id;
 
-    $(document).ready(function() {
-        connect();
-    });
+  $(document).ready(function() {
+    connect();
+  });
 
-    // var usernamePage = document.querySelector('#username-page');
-    // var usernameForm = document.querySelector('#usernameForm');
+  // var usernamePage = document.querySelector('#username-page');
+  // var usernameForm = document.querySelector('#usernameForm');
 
-    // 전체 페이지
-    var chatPage = document.querySelector('#chat-page');
+  // 전체 페이지
+  var chatPage = document.querySelector('#chat-page');
 
-    // 메시지를 입력하는 부분
-    var messageInput = document.querySelector('#message');
-    // 메시지를 로딩하는 부분
-    var messageArea = document.querySelector('#messageArea');
-    // 연결 확인하는 부분
-    var connectingElement = document.querySelector('.connecting');
+  // 메시지를 입력하는 부분
+  var messageInput = document.querySelector('#message');
+  // 메시지를 로딩하는 부분
+  var messageArea = document.querySelector('#messageArea');
+  // 연결 확인하는 부분
+  var connectingElement = document.querySelector('.connecting');
 
-    var stompClient = null;
+  var stompClient = null;
 
-    function connect() {
-        var socket = new SockJS('/ws');
-        stompClient = Stomp.over(socket);
+  function connect() {
+    var socket = new SockJS('/ws');
+    stompClient = Stomp.over(socket);
 
-        stompClient.connect({}, onConnected, onError);
+    stompClient.connect({}, onConnected, onError);
+  }
+
+  // websocket이 연결된 경우 (확인 완료)
+  function onConnected() {
+    // Subscribe 해당 토픽을 구독함 (해당 boardid 에 대해서 구독)
+    stompClient.subscribe("/topic/" + chatRoomId, onMessageReceived);
+
+    console.log("구독");
+    // Tell your username to the server
+    stompClient.send("/app/chat/adduser",
+            {},
+            JSON.stringify({nickname:nickname, username:username, type: 'ENTER', chatRoomId: chatRoomId})
+    )
+    // 연결이 되면 대화창을 추가하는건가 ?
+    // connectingElement.classList.add('hidden');
+  }
+
+  // websocket이 연결에 실패한 경우 (확인 완료 - 오류가 나지 않음)
+  function onError(error) {
+    connectingElement.textContent = 'Could not connect to WebSocket server. Please refresh this page to try again!';
+    connectingElement.style.color = 'red';
+  }
+
+  function onMessageReceived(payload) {
+    var chat = JSON.parse(payload.body);
+
+    console.log(chat.type); // 이 콘솔 찍히는거 확인함 (Enter의 경우)
+
+    var messageElement = document.createElement('li');
+
+    if(chat.type === 'ENTER') {
+      messageElement.classList.add('event-message');
+      // 이거 안해도 되는거 아닌가 ?
+      chat.content = chat.username + chat.message;
+    } else if (chat.type === 'LEAVE') {
+      messageElement.classList.add('event-message');
+      chat.content = chat.username + chat.message;
+    } else {
+
+      if (chat.username === username) {
+        messageElement.classList.add('chat-message2');
+
+        var avatarElement = document.createElement('i');
+        var avatarText = document.createTextNode(chat.nickname[0]);
+        avatarElement.appendChild(avatarText);
+        avatarElement.style['background-color'] = getAvatarColor(chat.nickname);
+
+        var avatarElement = document.createElement('i');
+        var avatarText = document.createTextNode(chat.nickname[0]);
+        avatarElement.appendChild(avatarText);
+        avatarElement.style['background-color'] = getAvatarColor(chat.nickname);
+
+        messageElement.appendChild(avatarElement);
+
+        var usernameElement = document.createElement('span');
+        var usernameText = document.createTextNode(chat.nickname);
+        usernameElement.appendChild(usernameText);
+        messageElement.appendChild(usernameElement);
+      } else {
+        messageElement.classList.add('chat-message');
+
+        var avatarElement = document.createElement('i');
+        var avatarText = document.createTextNode(chat.nickname[0]);
+        avatarElement.appendChild(avatarText);
+        avatarElement.style['background-color'] = getAvatarColor(chat.nickname);
+
+        var avatarElement = document.createElement('i');
+        var avatarText = document.createTextNode(chat.nickname[0]);
+        avatarElement.appendChild(avatarText);
+        avatarElement.style['background-color'] = getAvatarColor(chat.nickname);
+
+        messageElement.appendChild(avatarElement);
+
+        var usernameElement = document.createElement('span');
+        var usernameText = document.createTextNode(chat.nickname);
+        usernameElement.appendChild(usernameText);
+        messageElement.appendChild(usernameElement);
+      }
     }
 
-    // websocket이 연결된 경우 (확인 완료)
-    function onConnected() {
-        // Subscribe 해당 토픽을 구독함 (해당 boardid 에 대해서 구독)
-        stompClient.subscribe("/topic/" + chatRoomId, onMessageReceived);
+    var textElement = document.createElement('p');
+    var messageText = document.createTextNode(chat.message);
+    textElement.appendChild(messageText);
 
-        console.log("구독");
-        // Tell your username to the server
-        stompClient.send("/app/chat/adduser",
-              {},
-              JSON.stringify({nickname:nickname, username:username, type: 'ENTER', chatRoomId: chatRoomId})
-        )
-        // 연결이 되면 대화창을 추가하는건가 ?
-        // connectingElement.classList.add('hidden');
+    messageElement.appendChild(textElement);
+
+    messageArea.appendChild(messageElement);
+    messageArea.scrollTop = messageArea.scrollHeight;
+  }
+
+  // usernameForm이 동작할 때 connect가 동작하도록 되어있으니
+  // usernameForm이 동작하지 않아도 connect가 동작하도록 변경하면 됨.
+  var messageForm = document.querySelector('#messageForm');
+  messageForm.addEventListener('submit', sendMessage, true)
+
+  // 메세지를 보낼 때마다 실행할 함수
+  function sendMessage(event) {
+    // 메세지 입력 필드에 입력된 값을 가져옴
+    var messageContent = messageInput.value.trim();
+
+    // 메세지가 존재하고 (공백이 아니고), 웹 소캣이 연결된 경우에만 메시지를 전송함
+    if(messageContent && stompClient) {
+      console.log(messageInput.value);
+
+      var chatMessage = {
+        chatRoomId: chatRoomId,
+        username: username,
+        nickname: nickname,
+        message: messageInput.value,
+        type: 'TALK'
+      };
+
+      // json으로 감싸서 서버로 전송
+      stompClient.send("/app/chat/sending", {}, JSON.stringify(chatMessage));
+
+      // messageInput 필드를 공백으로 처리
+      messageInput.value = '';
     }
 
-    // websocket이 연결에 실패한 경우 (확인 완료 - 오류가 나지 않음)
-    function onError(error) {
-        connectingElement.textContent = 'Could not connect to WebSocket server. Please refresh this page to try again!';
-        connectingElement.style.color = 'red';
+    event.preventDefault();
+  }
+
+  // 사용자 프로필 설정 (Random Color)
+  function getAvatarColor(messageSender) {
+    var hash = 0;
+    for (var i = 0; i < messageSender.length; i++) {
+      hash = 31 * hash + messageSender.charCodeAt(i);
     }
 
-    function onMessageReceived(payload) {
-        var chat = JSON.parse(payload.body);
+    var index = Math.abs(hash % colors.length);
+    return colors[index];
+  }
 
-        console.log(chat.type); // 이 콘솔 찍히는거 확인함 (Enter의 경우)
+  // 아바타 프로필 컬러 랜덤 설정
+  var colors = [
+    '#2196F3', '#32c787', '#00BCD4', '#ff5652',
+    '#ffc107', '#ff85af', '#FF9800', '#39bbb0'
+  ];
 
-        var messageElement = document.createElement('li');
+  document.addEventListener("DOMContentLoaded", () => {
+    const container = document.getElementById("stars-container");
 
-        if(chat.type === 'ENTER') {
-            messageElement.classList.add('event-message');
-            // 이거 안해도 되는거 아닌가 ?
-            chat.content = chat.username + chat.message;
-        } else if (chat.type === 'LEAVE') {
-            messageElement.classList.add('event-message');
-            chat.content = chat.username + chat.message;
-        } else {
-
-            if (chat.username === username) {
-                messageElement.classList.add('chat-message2');
-
-                var avatarElement = document.createElement('i');
-                var avatarText = document.createTextNode(chat.nickname[0]);
-                avatarElement.appendChild(avatarText);
-                avatarElement.style['background-color'] = getAvatarColor(chat.nickname);
-
-                var avatarElement = document.createElement('i');
-                var avatarText = document.createTextNode(chat.nickname[0]);
-                avatarElement.appendChild(avatarText);
-                avatarElement.style['background-color'] = getAvatarColor(chat.nickname);
-
-                messageElement.appendChild(avatarElement);
-
-                var usernameElement = document.createElement('span');
-                var usernameText = document.createTextNode(chat.nickname);
-                usernameElement.appendChild(usernameText);
-                messageElement.appendChild(usernameElement);
-            } else {
-                messageElement.classList.add('chat-message');
-
-                var avatarElement = document.createElement('i');
-                var avatarText = document.createTextNode(chat.nickname[0]);
-                avatarElement.appendChild(avatarText);
-                avatarElement.style['background-color'] = getAvatarColor(chat.nickname);
-
-                var avatarElement = document.createElement('i');
-                var avatarText = document.createTextNode(chat.nickname[0]);
-                avatarElement.appendChild(avatarText);
-                avatarElement.style['background-color'] = getAvatarColor(chat.nickname);
-
-                messageElement.appendChild(avatarElement);
-
-                var usernameElement = document.createElement('span');
-                var usernameText = document.createTextNode(chat.nickname);
-                usernameElement.appendChild(usernameText);
-                messageElement.appendChild(usernameElement);
-            }
-        }
-
-        var textElement = document.createElement('p');
-        var messageText = document.createTextNode(chat.message);
-        textElement.appendChild(messageText);
-
-        messageElement.appendChild(textElement);
-
-        messageArea.appendChild(messageElement);
-        messageArea.scrollTop = messageArea.scrollHeight;
+    for (let i = 0; i < 100; i++) {
+      const star = document.createElement("div");
+      star.className = "star";
+      star.style.left = `${Math.random() * 100}vw`;
+      star.style.top = `${Math.random() * 100}vh`;
+      container.appendChild(star);
     }
-
-    // usernameForm이 동작할 때 connect가 동작하도록 되어있으니
-    // usernameForm이 동작하지 않아도 connect가 동작하도록 변경하면 됨.
-    var messageForm = document.querySelector('#messageForm');
-    messageForm.addEventListener('submit', sendMessage, true)
-
-    // 메세지를 보낼 때마다 실행할 함수
-    function sendMessage(event) {
-        // 메세지 입력 필드에 입력된 값을 가져옴
-        var messageContent = messageInput.value.trim();
-
-        // 메세지가 존재하고 (공백이 아니고), 웹 소캣이 연결된 경우에만 메시지를 전송함
-        if(messageContent && stompClient) {
-            console.log(messageInput.value);
-
-            var chatMessage = {
-                chatRoomId: chatRoomId,
-                username: username,
-                nickname: nickname,
-                message: messageInput.value,
-                type: 'TALK'
-            };
-
-            // json으로 감싸서 서버로 전송
-            stompClient.send("/app/chat/sending", {}, JSON.stringify(chatMessage));
-
-            // messageInput 필드를 공백으로 처리
-            messageInput.value = '';
-        }
-
-        event.preventDefault();
-    }
-
-    // 사용자 프로필 설정 (Random Color)
-    function getAvatarColor(messageSender) {
-        var hash = 0;
-        for (var i = 0; i < messageSender.length; i++) {
-            hash = 31 * hash + messageSender.charCodeAt(i);
-        }
-
-        var index = Math.abs(hash % colors.length);
-        return colors[index];
-    }
-
-    // 아바타 프로필 컬러 랜덤 설정
-    var colors = [
-        '#2196F3', '#32c787', '#00BCD4', '#ff5652',
-        '#ffc107', '#ff85af', '#FF9800', '#39bbb0'
-    ];
-
-    document.addEventListener("DOMContentLoaded", () => {
-        const container = document.getElementById("stars-container");
-
-        for (let i = 0; i < 100; i++) {
-            const star = document.createElement("div");
-            star.className = "star";
-            star.style.left = `${Math.random() * 100}vw`;
-            star.style.top = `${Math.random() * 100}vh`;
-            container.appendChild(star);
-        }
-    });
+  });
 
 </script>
 </html>
