REFACTOR : 병합 과정의 코드 리팩토링

--- a/src/main/resources/templates/mainPage.html
+++ b/src/main/resources/templates/mainPage.html
@@ -102,7 +102,7 @@
     // 게시글 생성 버튼 클릭 이벤트 핸들러
     $("#create-post-button").click(function () {
         // 게시글 생성 페이지로 이동
-        window.location.href = "/api/posts";
+        window.location.href = "/api/post-page";
     });
 </script>
 
