REFACTOR : 알림 코드 수정(알림 클릭시 게시글조회) + 게시글, 댓글 정보가져오도록 수정

--- a/src/main/resources/templates/backAdmins.html
+++ b/src/main/resources/templates/backAdmins.html
@@ -601,7 +601,7 @@
                 <tr>
                     <td><input type="checkbox" class="user-checkbox" data-postid="${post.id}"></td>
                     <td>게시글 작성자 : </td>
-                    <td>${post.nickname}</td>
+                    <td>${post.username}(${post.nickname})</td>
                 <tr>
                     <td></td>
                     <td>게시글 제목 : </td>
@@ -641,7 +641,7 @@
                  <tr>
                     <td><input type="checkbox" class="user-checkbox" data-commentid="${comment.id}"></td>
                     <td>댓글 작성자 : </td>
-                    <td>${comment.nickname}</td>
+                    <td>${comment.username}(${comment.nickname})</td>
                 </tr>
                 <tr>
                     <td></td>
