--- a/src/main/resources/templates/backUsers.html
+++ b/src/main/resources/templates/backUsers.html
@@ -663,7 +663,7 @@
                 <tr>
                     <td><input type="checkbox" class="user-checkbox" data-postid="${post.id}" data-title="${post.title}" data-content="${post.content}"  data-completed="${post.completed}"></td>
                     <td>게시글 작성자 : </td>
-                    <td>${post.nickname}</td>
+                    <td>${post.username}(${post.nickname})</td>
                 <tr>
                     <td></td>
                     <td>게시글 제목 : </td>
@@ -698,7 +698,7 @@
                  <tr>
                     <td><input type="checkbox" class="user-checkbox" data-commentid="${comment.id}" data-content="${comment.content}"></td>
                     <td>댓글 작성자 : </td>
-                    <td>${comment.nickname}</td>
+                    <td>${comment.username}(${comment.nickname})</td>
                 </tr>
                 <tr>
                     <td></td>
