--- a/src/main/resources/templates/mainPage.html
+++ b/src/main/resources/templates/mainPage.html
@@ -52,19 +52,15 @@
 
 
 <div id="post-list">
-    <form method="get" action="/api/posts/project">
-        <ul>
-            <li th:each="project, iterStat : ${mainPage}" th:if="${iterStat.index < 5}">
-                <!--                <a>-->
-                <h2 th:text="${project.title}"></h2>
-                <h3 th:text="${project.category}"></h3>
-                <a th:href="@{'/api/posts/' + ${project.id}}">
-                    자세히 보기
-                </a>
-
-            </li>
-        </ul>
-    </form>
+    <ul>
+        <li th:each="project : ${projects}">
+            <h2 th:text="${project.title}"></h2>
+            <h3 th:text="${project.category}"></h3>
+            <a th:href="@{'/api/posts/' + ${project.id}}">
+                자세히 보기
+            </a>
+        </li>
+    </ul>
 </div>
 
 <div id="study-list">
