--- a/src/main/resources/templates/board.html
+++ b/src/main/resources/templates/board.html
@@ -23,6 +23,17 @@
     <title>코끼리</title>
 
     <style>
+        @font-face {
+            font-family: 'TheJamsil5Bold';
+            src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2302_01@1.0/TheJamsil5Bold.woff2') format('woff2');
+            font-weight: 500;
+            font-style: normal;
+        }
+
+        * {
+            font-family : 'TheJamsil5Bold', cursive;
+        }
+
         html, body {
             height: 100%;
             width: 100%;
@@ -318,7 +329,10 @@
 
         /* 모달 안의 검색 list들 */
         .list-group-item {
-            cursor: pointer;
+            font-size: 16px;
+            display: flex;
+            flex-direction: row;
+            align-items: center;
         }
 
         #selectedResultsModal {
@@ -348,66 +362,12 @@
             background-color: #FFBFBF;
         }
 
-        /* 메뉴 슬라이드 보이게 하기 */
-        #menuicon {
-            width: 5%;
-            display: none;
-        }
-
-        input[id="menuicon"] + label {
-            display: block;
+        .closebtn{
             width: 40px;
-            height: 30px;
-            position: relative;
-            cursor: pointer;
-            margin-right: 10px;
+            height: 40px;
+            background-color: transparent;
+            border: none;
         }
-
-        input[id="menuicon"] + label  span {
-            display: block;
-            position: absolute;
-            width: 100%;
-            height : 5px;
-            border-radius: 30px;
-            background-color: #ffffff;
-            transition: all 0.35s;
-        }
-        input[id="menuicon"] + label  span:nth-child(1) {
-            top: 0;
-        }
-        input[id="menuicon"] + label  span:nth-child(2) {
-            top : 50%;
-            transform: translateY(-50%);
-        }
-        input[id="menuicon"] + label  span:nth-child(3) {
-            bottom: 0;
-        }
-
-        input[id="menuicon"]:checked + label + div {
-            left: 0;
-        }
-
-        .sidebar {
-            width: 300px;
-            height: 100%;
-            background-color: #ffffff;
-            position: fixed;
-            top: 0;
-            left: -300px;
-            z-index: 1;
-            transition: all .35s;
-            display: flex;
-            flex-direction: column;
-        }
-
-        .sidebar-title {
-            height: 50px;
-            display: flex;
-            align-items: center ;
-            justify-content: center;
-            color: #000;
-        }
-
     </style>
 </head>
 <body>
@@ -477,24 +437,32 @@
             </div>
         </div>
 
-        <input type="checkbox" id = "menuicon">
-        <label for="menuicon">
-            <span></span>
-            <span></span>
-            <span></span>
-        </label>
-        <div class = "sidebar">
-            <div class="sidebar-title">코끼리</div>
-            <button id="leaveButton" class="btn btn-light" data-bs-toggle="modal" th:data-bs-target="'#leaveboard'+${board.id}" >프로젝트 떠나기</button>
-
-            <button type="button" class="btn btn-light" data-bs-toggle="modal" data-bs-target="#inviteModal">프로젝트에 초대</button>
-
-            <button class="btn btn-light" type="button" id="gotoCalendar"> 달력 보기 </button>
-
-            <button class="btn btn-light" type="button" id="gotoChat"> 채팅 하기 </button>
+        <div type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasWithBothOptions" aria-controls="offcanvasWithBothOptions">
+            <img src="https://cdn-icons-png.flaticon.com/128/8212/8212733.png" style="width: 40px; height: 40px;"> <!-- 로고 이미지 추가 -->
         </div>
 
-        <button class="btn btn-light" type="button" id="gotoBoards"> X </button>
+        <button class="closebtn" type="button" id="gotoBoards">
+            <img src="https://cdn-icons-png.flaticon.com/128/10728/10728089.png" style="width: 30px; height: 30px;">
+        </button>
+
+        <div class="offcanvas offcanvas-start w-25" data-bs-scroll="true" tabindex="-1" id="offcanvasWithBothOptions" aria-labelledby="offcanvasWithBothOptionsLabel">
+            <div class="offcanvas-header" style = "align-items:center;">
+                <h5 class="offcanvas-title" id="offcanvasWithBothOptionsLabel" style="color: #1a1515">
+                    <img src="https://cdn-icons-png.flaticon.com/128/1864/1864497.png" style="width: 40px; height: 40px;"> <!-- 로고 이미지 추가 -->
+                    코끼리
+                </h5>
+                <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+            </div>
+
+            <div class="list-group list-group-flush">
+                <a class="list-group-item list-group-item-action" id="leaveButton" data-bs-toggle="modal" th:data-bs-target="'#leaveboard'+${board.id}" >프로젝트 떠나기</a>
+                <a class="list-group-item list-group-item-action" data-bs-toggle="modal" data-bs-target="#inviteModal" >프로젝트에 초대</a>
+                <a class="list-group-item list-group-item-action" id="gotoCalendar" >달력 보기</a>
+                <a class="list-group-item list-group-item-action" id="gotoChat" >채팅 하기</a>
+                <a class="list-group-item list-group-item-action" id="gotoMiniGame" >미니 게임</a>
+            </div>
+
+        </div>
     </div>
 
 </div>
