--- a/src/main/resources/templates/chat.html
+++ b/src/main/resources/templates/chat.html
@@ -11,7 +11,16 @@
   <link rel="icon" href="https://cdn-icons-png.flaticon.com/128/1864/1864497.png" />
 
   <style>
+
+    @font-face {
+      font-family: 'TheJamsil5Bold';
+      src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2302_01@1.0/TheJamsil5Bold.woff2') format('woff2');
+      font-weight: 500;
+      font-style: normal;
+    }
+
     * {
+      font-family : 'TheJamsil5Bold', cursive;
       -webkit-box-sizing: border-box;
       -moz-box-sizing: border-box;
       box-sizing: border-box;
@@ -101,7 +110,7 @@
       color: #128ff2;
     }
 
-    button {
+    /* button {
       box-shadow: none;
       border: 1px solid transparent;
       font-size: 14px;
@@ -114,9 +123,10 @@
       transition: all 0.2s ease-in-out;
       cursor: pointer;
       min-height: 38px;
-    }
+    } */
 
     button.primary {
+      border: none;
       background-color: #a482d1;
       box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.12);
       color: #fff;
@@ -309,13 +319,16 @@
     }
 
     .chat-header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
       text-align: center;
       padding: 15px;
       border-bottom: 1px solid #ececec;
     }
 
     .chat-header h2 {
-      margin: 0;
+      margin: 0 0 0 10px;
       font-weight: 500;
     }
 
@@ -375,34 +388,73 @@
       }
     }
 
+    /* 돌아가기 버튼 */
+    button.goOut {
+      outline: none;
+      vertical-align: middle;
+      text-decoration: none;
+      font-weight: 600;
+      text-transform: uppercase;
+      padding: 0.5em 1.5em;
+      background:#fff0f0;
+      border: 2px solid #b18597;
+      border-radius: 0.75em;
+      transform-style: preserve-3d;
+      transition: transform 150ms cubic-bezier(0, 0, 0.58, 1), background 150ms cubic-bezier(0, 0, 0.58, 1);
+    }
+
+    button.goOut::before {
+      position: absolute;
+      content: '';
+      width: 100%;
+      height: 100%;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background: #f9c4d2;
+      border-radius: inherit;
+      box-shadow: 0 0 0 2px  #b18597, 0 0.625em 0 0 #ffe3e2;
+      transform: translate3d(0, 0.5em, -1em);
+      transition: transform 150ms cubic-bezier(0, 0, 0.58, 1), box-shadow 150ms cubic-bezier(0, 0, 0.58, 1);
+    }
+
+    button.goOut:hover {
+      background: #ffe9e9;
+      transform: translate(0, 0.15em);
+    }
+
+    button.goOut:hover::before {
+      box-shadow: 0 0 0 2px  #b18597, 0 0.5em 0 0 #ffe3e2;
+      transform: translate3d(0, 0.5em, -1em);
+    }
+
+    button.goOut:active {
+      background: #ffe9e9;
+      transform: translate(0em, 0.75em);
+    }
+
+    button.goOut:active::before {
+      box-shadow: 0 0 0 2px #b18597,  0 0 #ffe3e2;
+      transform: translate3d(0, 0, -1em);
+    }
+
   </style>
 
 </head>
 <body>
 <noscript>
-  <h2>Sorry! Your browser doesn't support Javascript</h2>
+  <h2>죄송합니다</h2>
 </noscript>
 
 <div id="stars-container"></div>
-
-<!--<div id="username-page">-->
-<!--  <div class="username-page-container">-->
-<!--    <h1 class="title">Type your username</h1>-->
-<!--    <form id="usernameForm" name="usernameForm">-->
-<!--      <div class="form-group">-->
-<!--        <input type="text" id="name" placeholder="Username" autocomplete="off" class="form-control" />-->
-<!--      </div>-->
-<!--      <div class="form-group">-->
-<!--        <button type="submit" class="accent username-submit">Start Chatting</button>-->
-<!--      </div>-->
-<!--    </form>-->
-<!--  </div>-->
-<!--</div>-->
 
 <div id="chat-page" class="hidden">
   <div class="chat-container">
     <div class="chat-header">
       <h2 th:text="${board.title}">Chat</h2>
+
+      <button class="goOut" id = "goOutBtn">뒤로가기</button>
     </div>
     <!--    <div class="connecting">-->
     <!--      Connecting...-->
@@ -439,6 +491,12 @@
   let url = window.location.href;
   let id = url.replace("http://localhost:8080/api/chat/", "");
   var chatRoomId = id;
+
+  const goOutBtn = document.getElementById('goOutBtn');
+  goOutBtn.addEventListener('click', () => {
+    window.location.href = '/api/boards/' + id;
+  })
+
 
   $(document).ready(function() {
     connect();
