--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -1,5 +1,4 @@
 body {
-    display: flex;
     background-size: cover;
     background-image: url("https://images.klipfolio.com/website/public/79b53931-b472-4cd5-85bc-f19df936cb9b/Best_Team_Collaboration_Tools.png");
 }
@@ -22,36 +21,32 @@ ul {
     display: flex;
     list-style-type: none;
 }
-
 li {
-    color: #000;
     margin-left: 25px
 }
 
-li:hover {
-    color: #fff;
-    font-weight: bold;
-}
-
 a {
-    color: #000;
+    color: #DEE2E6;
     text-decoration: none;
-    justify-content: space-between;
 }
 a:hover{
-    color: #fff;
+    color: #000;
     font-weight: bold;
 }
 
+header{
+    display: flex;
+}
 
+#flexHeader{
+    justify-content: space-between;
+}
 
 
 .logo {
-    justify-content: space-between;
-    margin: 50px 700px 50px 90px;
+    margin: 50px 50px 90px;
     width: 70px;
-    display: inline-block;
-
+    display: flex;
 }
 
 .menu {
