--- a/src/main/resources/templates/login-page.html
+++ b/src/main/resources/templates/login-page.html
@@ -10,7 +10,7 @@
             integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g="
             crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/js-cookie@3.0.5/dist/js.cookie.min.js"></script>
-    <link rel="stylesheet" href="/css/login.css">
+    <link rel="stylesheet" type="text/css"  href="/css/login.css">
 
     <!--    alert 창 library-->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
