--- a/src/main/resources/templates/notification.html
+++ b/src/main/resources/templates/notification.html
@@ -88,6 +88,13 @@
     .notification-list-item.read {
       background-color: #f0f0f0;
     }
+    .mark-all-read-button {
+      position: absolute;
+      top: 70px;
+      right: 52px;
+      padding: 1px 4px; /* 패딩을 조절하여 버튼 크기 조절 */
+      font-size: 12px; /* 버튼 내부 텍스트 크기 조절 */
+    }
   </style>
 </head>
 <body>
@@ -97,6 +104,7 @@
     <i class="fas fa-bell"></i>
     <span id="notificationBadge" class="badge"></span>
   </div>
+  <button id="markAllReadButton" class="mark-all-read-button">전체 읽음</button>
 </div>
 <!-- 나머지 내용 -->
 <div class="notification-list" id="notificationList">
@@ -186,7 +194,7 @@
       }
     };
 
-// 알림 아이템 추가 함수
+    // 알림 아이템 추가 함수
     const addNotificationToList = (notification) => {
       const listItem = document.createElement('div');
       listItem.className = notification.read ? 'notification-list-item read' : 'notification-list-item unread';
@@ -210,6 +218,32 @@
         $.post(`/api/mark-notification-as-read/${notification.id}`)
       }
     };
+
+    // 전체읽음 버튼 클릭 시 실행되는 함수
+    document.getElementById('markAllReadButton').addEventListener('click', function() {
+      const confirmResult = confirm('알림 전체 읽음처리 하시겠습니까?');
+      if (confirmResult) {
+        // 확인을 선택한 경우 서버에 요청 보내기
+        markAllNotificationsAsRead();
+        window.location.href = window.location.href;
+      } else {
+        // 취소를 선택한 경우
+        // 아무 작업도 하지 않음
+      }
+    });
+
+    // 알림 전체 읽음 처리 함수
+    function markAllNotificationsAsRead() {
+      $.post(`/api/mark-all-notifications-as-read/${userId}`)
+              .done(function(response) {
+                alert(response); // 성공 메시지 출력
+                // 서버 응답에 따라 적절한 처리를 수행할 수 있습니다.
+                // 예를 들어 알림 목록을 다시 가져와서 업데이트하는 등의 작업을 수행할 수 있습니다.
+              })
+              .fail(function(response) {
+                alert(response); // 오류 메시지 출력
+              });
+    }
 
     // 알림 아이템 클릭 처리 함수
     const handleNotificationItemClick = (notification, listItem) => {
