--- a/src/main/resources/templates/mainPage.html
+++ b/src/main/resources/templates/mainPage.html
@@ -45,6 +45,7 @@
         <li><a href="/api/posts/categories/1">협업 프로젝트</a></li>
         <li><a href="/api/posts/categories/2">스터디 모집</a></li>
         <li><a href="/api/posts/categories/3">문제은행</a></li>
+        <li><a href="/api/posts/categories/4">자유게시판</a></li>
     </ul>
 </div>
 
@@ -99,6 +100,20 @@
             <h2 th:text="${exam.title}"></h2>
             <h3 th:text="${exam.category}"></h3>
             <a th:href="@{'/api/posts/' + ${exam.id}}">
+                자세히 보기
+            </a>
+
+        </li>
+    </ul>
+</div>
+
+<div id="forum-list">
+    <ul>
+        <li th:each="forum : ${forums}">
+            <!--                <a>-->
+            <h2 th:text="${forum.title}"></h2>
+            <h3 th:text="${forum.category}"></h3>
+            <a th:href="@{'/api/posts/' + ${forum.id}}">
                 자세히 보기
             </a>
 
