--- a/src/main/resources/templates/updatePost.html
+++ b/src/main/resources/templates/updatePost.html
@@ -41,6 +41,7 @@
                 <option value="1">협업 프로젝트</option>
                 <option value="2">스터디 모집</option>
                 <option value="3">문제은행</option>
+                <option value="4">자유 게시판</option>
             </select>
         </div>
 
