--- a/src/main/resources/templates/mainPage.html
+++ b/src/main/resources/templates/mainPage.html
@@ -376,7 +376,7 @@
 
         <div class="bottom-bottom">
             <div class="bottom-bottom-left">
-                <a class = "category-title" href="/api/posts/categories/3">질문</a>
+                <a class = "category-title" href="/api/posts/categories/3">문제은행</a>
                 <ul class="list-group list-group-flush">
                     <li class="list-group-item d-flex justify-content-between align-items-center"
                         th:each="exam : ${exams}"  th:onclick="'gotoPost(\'' + ${exam.id} + '\')'">
@@ -591,9 +591,7 @@
     /* 페이지 첫 로드 메서드 */
     function pageSetting() {  // main page 세팅
         const token = Cookies.get('Authorization');
-        const rtoken = Cookies.get('RefreshToken');
         console.log(token);
-        console.log(rtoken);
 
         const loginBtn = document.getElementById('login');
         const logoutBtn = document.getElementById('logout');
