REFACTOR : 토큰 생성 시 만료 시간 지정
-> 웹 브라우저가 자동으로 만료 토큰 삭제 처리 수행함.

사용자, 관리자 페이지 css
1. 게시글, 댓글5개씩 출력하도록 변경 요망

--- a/src/main/resources/templates/backAdmins.html
+++ b/src/main/resources/templates/backAdmins.html
@@ -274,6 +274,7 @@
 
     /* 새로 추가한 스타일 */
     .user-info-container {
+      box-sizing: unset;
       display: flex;
       flex-direction: column; /* 세로 정렬로 변경 */
       justify-content: flex-start;
@@ -282,7 +283,7 @@
       height: 100vh;
       background-color: white;
       border: 1px solid #ddd;
-      margin: 10px;
+      margin-left: 10%;
       padding: 20px;
       box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
  /*     position: fixed;
@@ -681,7 +682,7 @@
       success: function (data) {
         removeToken();
         alert("로그아웃 성공");
-        window.location.reload();
+        window.location.href = "/";
       },
       error: function () {
         alert("로그아웃 실패");
