--- a/src/main/resources/templates/mainPage.html
+++ b/src/main/resources/templates/mainPage.html
@@ -92,13 +92,13 @@
         }
 
 
-
-
         /* 알림 */
         .notification-icon {
             font-size: 30px;
             cursor: pointer;
             margin-right: 10px;
+            display: flex;
+            flex-direction: row;
         }
 
         .notification-icon div {
@@ -270,6 +270,15 @@
             color: #a9a9a9;
         }
 
+        .mark-all-read-button {
+            position: absolute;
+            top: 10px; /* 버튼 위치 조정 */
+            right: 10px; /* 버튼 위치 조정 */
+            padding: 1px 4px;
+            font-size: 12px;
+            z-index: 9999; /* 다른 요소보다 앞에 표시되도록 설정 */
+        }
+
     </style>
 
 </head>
@@ -337,20 +346,15 @@
 
     </div>
 
-
-<div id="category-list" style="float: right;">
-    <ul>
-        <li><a href="/api/posts/categories/1">협업 프로젝트</a></li>
-        <li><a href="/api/posts/categories/2">스터디 모집</a></li>
-        <li><a href="/api/posts/categories/3">문제은행</a></li>
-        <li><a href="/api/posts/categories/4">자유게시판</a></li>
-    </ul>
-
 </div>
 
 <!-- 나머지 내용 -->
 <div class="notification-list" id="notificationList">
-    <div class="notification-list-header">알림</div>
+    <div class="notification-list-header">
+        <!-- 전체읽음 버튼 추가 -->
+        <button id="markAllReadButton" class="mark-all-read-button">전체 읽음</button>
+        알림
+    </div>
 </div>
 
 
@@ -385,7 +389,7 @@
 
         <div class="bottom-bottom">
             <div class="bottom-bottom-left">
-                <a class = "category-title" href="/api/posts/categories/3">질문</a>
+                <a class = "category-title" href="/api/posts/categories/3">문제은행</a>
                 <ul class="list-group list-group-flush">
                     <li class="list-group-item d-flex justify-content-between align-items-center"
                         th:each="exam : ${exams}"  th:onclick="'gotoPost(\'' + ${exam.id} + '\')'">
@@ -398,68 +402,21 @@
 
             <div class="bottom-bottom-right">
                 <a class = "category-title" href="/api/posts/categories/4">자유게시판</a>
-                <!--                <ul class="list-group list-group-flush">-->
-                <!--                    <li class="list-group-item d-flex justify-content-between align-items-center"-->
-                <!--                        th:each="project : ${projectList}"  th:onclick="'gotoPost(\'' + ${project.id} + '\')'">-->
-                <!--                        <span th:text="${project.title}">제목</span>-->
-                <!--                        <span th:text="${project.nickname}">작성자</span>-->
-                <!--                        <span class="badge bg-primary rounded-pill">조회수: 1</span>-->
-                <!--                    </li>-->
-                <!--                </ul>-->
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item d-flex justify-content-between align-items-center"
+                        th:each="forum : ${forums}"  th:onclick="'gotoPost(\'' + ${forum.id} + '\')'">
+                        <span th:text="${forum.title}">제목</span>
+                        <span th:text="${forum.nickname}">작성자</span>
+                        <span class="badge bg-primary rounded-pill"  th:text="|조회수: ${forum.view_cnt}|">조회수: 1</span>
+                    </li>
+                </ul>
             </div>
         </div>
     </div>
 
 </div>
 
-
-<div id="forum-list">
-    <ul>
-        <li th:each="forum : ${forums}">
-            <!--                <a>-->
-            <h2 th:text="${forum.title}"></h2>
-            <h3 th:text="${forum.category}"></h3>
-            <a th:href="@{'/api/posts/' + ${forum.id}}">
-                자세히 보기
-            </a>
-
-        </li>
-    </ul>
-</div>
-
-<!--    <div id="study-list">-->
-<!--        <form method="get" action="/api/posts/study">-->
-<!--            <ul>-->
-<!--                <li th:each="study, iterStat : ${mainPage}" th:if="${iterStat.index < 5}">-->
-<!--                    &lt;!&ndash;                <a>&ndash;&gt;-->
-<!--                    <h2 th:text="${study.title}"></h2>-->
-<!--                    <h3 th:text="${study.category}"></h3>-->
-<!--                    <a th:href="@{'/api/posts/' + ${study.id}}">-->
-<!--                        자세히 보기-->
-
-<!--                    </a>-->
-<!--                </li>-->
-<!--            </ul>-->
-<!--        </form>-->
-<!--    </div>-->
-<!--</div>-->
-<!--<div id="exam-list">-->
-<!--    <form method="get" action="/api/posts/exam">-->
-<!--        <ul>-->
-<!--            <li th:each="exam, iterStat : ${mainPage}" th:if="${iterStat.index < 5}">-->
-
-<!--                <h2 th:text="${exam.title}"></h2>-->
-<!--                <h3 th:text="${exam.category}"></h3>-->
-<!--                <a th:href="@{'/api/posts/' + ${exam.id}}">자세히 보기-->
-
-<!--                </a>-->
-<!--            </li>-->
-<!--        </ul>-->
-<!--    </form>-->
-<!--</div>-->
-
 </body>
-
 
 <script>
     function gotoPost(postid) {
@@ -515,7 +472,7 @@
         // 페이지 로드 시 사용자 정보를 가져와서 알림 데이터를 불러옴
         fetchUserInfo();
 
-        // 알림 목록 업데이트 함수
+// 알림 목록 업데이트 함수
         const updateNotificationList = () => {
             notificationList.innerHTML = ''; // 목록 초기화
             notificationsList.forEach(notification => {
@@ -523,8 +480,33 @@
             });
             const listHeader = document.createElement('div');
             listHeader.className = 'notification-list-header';
-            listHeader.innerText = '알림';
+
+            // Create the "전체 읽음" button
+            const markAllReadButton = `
+        <button id="markAllReadButton" class="mark-all-read-button">전체 읽음</button>
+    `;
+            listHeader.innerHTML = markAllReadButton; // innerHTML로 버튼 추가
+            listHeader.innerHTML += '알림';
+
             notificationList.insertBefore(listHeader, notificationList.firstChild);
+
+            // "전체 읽음" 버튼에 이벤트 리스너 연결
+            const button = document.getElementById('markAllReadButton');
+            button.addEventListener('click', function() {
+                const confirmResult = confirm('알림 전체 읽음처리 하시겠습니까?');
+                if (confirmResult) {
+                    // 확인을 선택한 경우 서버에 요청 보내기
+                    markAllNotificationsAsRead();
+                    // alert('알림이 전체 읽음 처리되었습니다.');
+                    window.location.href = window.location.href;
+                } else {
+                    // 취소를 선택한 경우
+                    // 아무 작업도 하지 않음
+                }
+
+            });
+
+
         };
 
         // 현재 시간과 주어진 시간 사이의 경과 시간을 계산하여 문자열로 반환하는 함수
@@ -618,8 +600,35 @@
             };
         });
 
+        // // 전체읽음 버튼 클릭 시 실행되는 함수
+        // document.getElementById('markAllReadButton').addEventListener('click', function() {
+        //     const confirmResult = confirm('알림 전체 읽음처리 하시겠습니까?');
+        //     if (confirmResult) {
+        //         // 확인을 선택한 경우 서버에 요청 보내기
+        //         markAllNotificationsAsRead();
+        //         window.location.href = window.location.href;
+        //     } else {
+        //         // 취소를 선택한 경우
+        //         // 아무 작업도 하지 않음
+        //     }
+        // });
+
+        // 알림 전체 읽음 처리 함수
+        function markAllNotificationsAsRead() {
+            $.post(`/api/mark-all-notifications-as-read/${userId}`)
+                .done(function(response) {
+                    alert(response); // 성공 메시지 출력
+                    // 서버 응답에 따라 적절한 처리를 수행할 수 있습니다.
+                    // 예를 들어 알림 목록을 다시 가져와서 업데이트하는 등의 작업을 수행할 수 있습니다.
+                })
+                .fail(function(response) {
+                    alert(response); // 오류 메시지 출력
+                });
+        }
 
     });
+
+
 
     function removeToken() { // 토큰 삭제
         Cookies.remove('Authorization', {path: '/'});
