--- a/src/main/resources/templates/post.html
+++ b/src/main/resources/templates/post.html
@@ -20,7 +20,7 @@
     <script src="https://cdn.jsdelivr.net/npm/js-cookie@3.0.5/dist/js.cookie.min.js"></script>
 
     <!-- 로고 -->
-    <link rel="icon" href="https://cdn-icons-png.flaticon.com/128/1864/1864497.png" />
+    <link rel="icon" href="https://cdn-icons-png.flaticon.com/128/1864/1864497.png"/>
 
     <style>
 
@@ -33,7 +33,7 @@
         }
 
         * {
-            font-family : 'TheJamsil5Bold', cursive;
+            font-family: 'TheJamsil5Bold', cursive;
         }
 
         html, body {
@@ -174,6 +174,7 @@
             z-index: 10;
             margin-top: 45px; /* 헤더의 높이만큼 여백 추가 */
         }
+
         .notification-list-header {
             background-color: #ccc;
             padding: 10px;
@@ -184,12 +185,14 @@
             width: 13%; /* 가로 너비를 꽉 채우도록 설정 */
             z-index: 9998; /* 헤더 위에 배치 */
         }
+
         .notification-list-item {
             padding: 10px;
             border-bottom: 1px solid #ddd;
             cursor: pointer;
             background-color: white;
         }
+
         .notification-list-item.read {
             background-color: #f0f0f0;
         }
@@ -199,7 +202,7 @@
             cursor: pointer;
         }
 
-        .offcanvas{
+        .offcanvas {
             background-color: #f5f5fa;
         }
 
@@ -283,7 +286,7 @@
 
 
         /* 게시글 부분 수정 */
-        .post-content-top{
+        .post-content-top {
             width: 80%;
             height: 30%;
         }
@@ -320,7 +323,7 @@
             justify-content: space-between;
         }
 
-        .post-top-bottom{
+        .post-top-bottom {
             width: 100%;
             display: flex;
             flex-direction: row;
@@ -329,8 +332,8 @@
 
 
         /* 댓글 부분 수정 */
-        .comment-content{
-            margin-top:1%;
+        .comment-content {
+            margin-top: 1%;
             width: 100%;
             height: 49%;
             display: flex;
@@ -338,7 +341,7 @@
             align-items: center;
         }
 
-        .comment{
+        .comment {
             width: 80%;
             height: 100%;
             display: flex;
@@ -352,11 +355,11 @@
         }
 
         li {
-            list-style:none;
+            list-style: none;
         }
 
         p {
-            margin:0;
+            margin: 0;
         }
 
         ul {
@@ -369,7 +372,7 @@
             width: 60vw;
         }
 
-        .comment-container{
+        .comment-container {
             width: 100%;
             margin-top: 1vh;
         }
@@ -386,18 +389,18 @@
             background-color: #101014;
         }
 
-        .comment-one{
+        .comment-one {
             display: flex;
             flex-direction: row;
             margin-bottom: 10px;
             background-color: transparent;
         }
 
-        .comment-content-user{
+        .comment-content-user {
             width: 80%;
         }
 
-        .comment-button{
+        .comment-button {
             width: 20%;
             display: flex;
             flex-direction: column;
@@ -426,7 +429,8 @@
     </div>
     <div class="middle">
         <!-- 가운데 코끼리 글씨 및 로고  -->
-        <img src="https://cdn-icons-png.flaticon.com/128/1864/1864497.png" style="width: 35px; height: 35px;"> <!-- 로고 이미지 추가 -->
+        <img src="https://cdn-icons-png.flaticon.com/128/1864/1864497.png" style="width: 35px; height: 35px;">
+        <!-- 로고 이미지 추가 -->
         <div style="text-align: center;">
             코끼리
         </div>
@@ -440,14 +444,18 @@
             </div>
         </div>
 
-        <div style="text-align: center;" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasWithBothOptions" aria-controls="offcanvasWithBothOptions">
-            <img src="https://cdn-icons-png.flaticon.com/128/8212/8212733.png" style="width: 40px; height: 40px;"> <!-- 로고 이미지 추가 -->
+        <div style="text-align: center;" type="button" data-bs-toggle="offcanvas"
+             data-bs-target="#offcanvasWithBothOptions" aria-controls="offcanvasWithBothOptions">
+            <img src="https://cdn-icons-png.flaticon.com/128/8212/8212733.png" style="width: 40px; height: 40px;">
+            <!-- 로고 이미지 추가 -->
         </div>
 
-        <div class="offcanvas offcanvas-start w-25" data-bs-scroll="true" tabindex="-1" id="offcanvasWithBothOptions" aria-labelledby="offcanvasWithBothOptionsLabel">
-            <div class="offcanvas-header" style = "text-align: center; align-items:center;">
+        <div class="offcanvas offcanvas-start w-25" data-bs-scroll="true" tabindex="-1" id="offcanvasWithBothOptions"
+             aria-labelledby="offcanvasWithBothOptionsLabel">
+            <div class="offcanvas-header" style="text-align: center; align-items:center;">
                 <h5 class="offcanvas-title" id="offcanvasWithBothOptionsLabel">
-                    <img src="https://cdn-icons-png.flaticon.com/128/1864/1864497.png" style="width: 40px; height: 40px;"> <!-- 로고 이미지 추가 -->
+                    <img src="https://cdn-icons-png.flaticon.com/128/1864/1864497.png"
+                         style="width: 40px; height: 40px;"> <!-- 로고 이미지 추가 -->
                     코끼리
                 </h5>
                 <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
@@ -455,17 +463,22 @@
 
             <div class="list-group list-group-flush">
                 <!-- 카테고리 버튼과 하위 메뉴 -->
-                <button class="list-group-item list-group-item-action" data-bs-toggle="collapse" data-bs-target="#categoryMenu">게시판 카테고리</button>
+                <button class="list-group-item list-group-item-action" data-bs-toggle="collapse"
+                        data-bs-target="#categoryMenu">게시판 카테고리
+                </button>
                 <div id="categoryMenu" class="collapse">
-                    <a href="/api/posts/categories/1" class="list-group-item list-group-item-action mini-list">협업 인원 모집</a>
-                    <a href="/api/posts/categories/2" class="list-group-item list-group-item-action mini-list">스티디원 모집</a>
+                    <a href="/api/posts/categories/1" class="list-group-item list-group-item-action mini-list">협업 인원
+                        모집</a>
+                    <a href="/api/posts/categories/2" class="list-group-item list-group-item-action mini-list">스티디원
+                        모집</a>
                     <a href="/api/posts/categories/3" class="list-group-item list-group-item-action mini-list">문제은행</a>
                     <a href="/api/posts/categories/4" class="list-group-item list-group-item-action mini-list">자유게시판</a>
                 </div>
 
                 <a href="/api/view/users" class="list-group-item list-group-item-action">마이페이지</a>
                 <a href="/api/boards" class="list-group-item list-group-item-action">프로젝트 페이지</a>
-                <a href="/api/view/admins" class="list-group-item list-group-item-action" th:if="${admin}">관리자 페이지</a> <!--서버에서 admin 여부 true/false로 가져오기-->
+                <a href="/api/view/admins" class="list-group-item list-group-item-action" th:if="${admin}">관리자 페이지</a>
+                <!--서버에서 admin 여부 true/false로 가져오기-->
 
 
             </div>
@@ -483,8 +496,10 @@
 
 <div class="bottom">
     <div class="buttons">
-        <button id="update-post-button" style="margin-right: 10px;">게시글 수정</button>
-        <button type="button" id="delete-button" class="delete-button" onclick="deletePost()">게시물 삭제</button>
+        <div th:if="${post.userId == loginUser}">
+            <button id="update-post-button" style="margin-right: 10px;">게시글 수정</button>
+            <button type="button" id="delete-button" class="delete-button" onclick="deletePost()">게시물 삭제</button>
+        </div>
     </div>
 
     <div id="post-content">
@@ -518,7 +533,8 @@
             <form id="comment-form">
                 <div class="form-group">
                     <label for="comment-content">댓글 내용</label>
-                    <input type="text" id="comment-content" name="comment-content" class="input-field" placeholder="댓글을 입력하세요">
+                    <input type="text" id="comment-content" name="comment-content" class="input-field"
+                           placeholder="댓글을 입력하세요">
                 </div>
                 <button type="submit" class="submit-button">댓글 작성</button>
             </form>
@@ -541,7 +557,9 @@
 
                             <div class="comment-button">
                                 <button class="update-comment" th:attr="data-comment-id=${comment.id}">댓글수정</button>
-                                <button class="delete-comment" th:attr="onclick='deleteComment(' + ${comment.id} + ')'">댓글삭제</button>
+                                <button class="delete-comment" th:attr="onclick='deleteComment(' + ${comment.id} + ')'">
+                                    댓글삭제
+                                </button>
                             </div>
 
                             <div class="modal">
@@ -561,7 +579,6 @@
 
     </div>
 </div>
-
 
 
 <script>
@@ -724,7 +741,7 @@
 </body>
 
 <script>
-    $(document).ready(function() {
+    $(document).ready(function () {
         pageSetting();
 
         const notificationIcon = document.querySelector('.notification-icon');
@@ -790,7 +807,7 @@
 
             // "전체 읽음" 버튼에 이벤트 리스너 연결
             const button = document.getElementById('markAllReadButton');
-            button.addEventListener('click', function() {
+            button.addEventListener('click', function () {
                 const confirmResult = confirm('알림 전체 읽음처리 하시겠습니까?');
                 if (confirmResult) {
                     // 확인을 선택한 경우 서버에 요청 보내기
@@ -862,11 +879,11 @@
             const unreadCount = notificationsList.filter(notification => !notification.read).length;
             if (unreadCount > 0) {
                 notificationIcon.classList.add('new-notification');
-                notificationBadge.style.display="inline";
+                notificationBadge.style.display = "inline";
                 notificationBadge.innerText = unreadCount.toString();
             } else {
                 notificationIcon.classList.remove('new-notification');
-                notificationBadge.style.display="none";
+                notificationBadge.style.display = "none";
                 // notificationBadge.innerText = '';
             }
         };
@@ -914,18 +931,17 @@
         // 알림 전체 읽음 처리 함수
         function markAllNotificationsAsRead() {
             $.post(`/api/mark-all-notifications-as-read/${userId}`)
-                .done(function(response) {
+                .done(function (response) {
                     alert(response); // 성공 메시지 출력
                     // 서버 응답에 따라 적절한 처리를 수행할 수 있습니다.
                     // 예를 들어 알림 목록을 다시 가져와서 업데이트하는 등의 작업을 수행할 수 있습니다.
                 })
-                .fail(function(response) {
+                .fail(function (response) {
                     alert(response); // 오류 메시지 출력
                 });
         }
 
     });
-
 
 
     function removeToken() { // 토큰 삭제
@@ -962,7 +978,7 @@
         const logoutBtn = document.getElementById('logout');
         const keeploginBtn = document.getElementById('keeplogin');
 
-        if(!token) {
+        if (!token) {
             loginBtn.style.display = "inline-block";
             logoutBtn.style.display = "none";
             keeploginBtn.style.display = "none";
