--- a/src/main/resources/templates/mainPage.html
+++ b/src/main/resources/templates/mainPage.html
@@ -135,13 +135,13 @@
 
         .notification-list {
             position: absolute;
-            top: 100px; /* Adjust the top position to your preference */
+            top: 90px; /* Adjust the top position to your preference */
             right: 70px;
             width: 295px;
             background-color: white;
             border: 1px solid #ddd;
             box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
-            max-height: 700px;
+            max-height: 550px;
             overflow-y: auto;
             display: none;
             z-index: 10;
@@ -153,7 +153,7 @@
             text-align: center;
             font-weight: bold;
             position: fixed;
-            top: 100px;
+            top: 90px;
             width: 13%; /* 가로 너비를 꽉 채우도록 설정 */
             z-index: 9998; /* 헤더 위에 배치 */
         }
@@ -270,6 +270,14 @@
             color: #a9a9a9;
         }
 
+        .mark-all-read-button {
+            position: absolute;
+            top: 10px; /* 버튼 위치 조정 */
+            right: 10px; /* 버튼 위치 조정 */
+            padding: 1px 4px;
+            font-size: 12px;
+            z-index: 9999; /* 다른 요소보다 앞에 표시되도록 설정 */
+        }
     </style>
 
 </head>
@@ -328,8 +336,8 @@
 
                 <a href="/api/view/users" class="list-group-item list-group-item-action">마이페이지</a>
                 <a href="/api/boards" class="list-group-item list-group-item-action">프로젝트 페이지</a>
+                <a href="/api/chatRooms" class="list-group-item list-group-item-action">채팅 페이지</a> <!--채팅 페이지 테스트 중-->
                 <a href="/api/view/admins" class="list-group-item list-group-item-action" th:if="${admin}">관리자 페이지</a> <!--서버에서 admin 여부 true/false로 가져오기-->
-
 
             </div>
 
@@ -457,7 +465,10 @@
         };
 
         // 페이지 로드 시 사용자 정보를 가져와서 알림 데이터를 불러옴
-        fetchUserInfo();
+        const token = Cookies.get('Authorization');
+        if(token){ // 토큰 있을 경우
+            fetchUserInfo();
+        }
 
         // 알림 목록 업데이트 함수
         const updateNotificationList = () => {
@@ -467,8 +478,33 @@
             });
             const listHeader = document.createElement('div');
             listHeader.className = 'notification-list-header';
-            listHeader.innerText = '알림';
+
+            // Create the "전체 읽음" button
+            const markAllReadButton = `
+        <button id="markAllReadButton" class="mark-all-read-button">전체 읽음</button>
+    `;
+            listHeader.innerHTML = markAllReadButton; // innerHTML로 버튼 추가
+            listHeader.innerHTML += '알림';
+
             notificationList.insertBefore(listHeader, notificationList.firstChild);
+
+            // "전체 읽음" 버튼에 이벤트 리스너 연결
+            const button = document.getElementById('markAllReadButton');
+            button.addEventListener('click', function() {
+                const confirmResult = confirm('알림 전체 읽음처리 하시겠습니까?');
+                if (confirmResult) {
+                    // 확인을 선택한 경우 서버에 요청 보내기
+                    markAllNotificationsAsRead();
+                    // alert('알림이 전체 읽음 처리되었습니다.');
+                    window.location.href = window.location.href;
+                } else {
+                    // 취소를 선택한 경우
+                    // 아무 작업도 하지 않음
+                }
+
+            });
+
+
         };
 
         // 현재 시간과 주어진 시간 사이의 경과 시간을 계산하여 문자열로 반환하는 함수
@@ -501,6 +537,7 @@
             };
             notificationList.insertBefore(listItem, notificationList.firstChild);
         };
+
 
         // 알림 읽음 처리 함수
         const markNotificationAsRead = (notification, listItem) => {
@@ -562,6 +599,19 @@
             };
         });
 
+        // 알림 전체 읽음 처리 함수
+        function markAllNotificationsAsRead() {
+            $.post(`/api/mark-all-notifications-as-read/${userId}`)
+                .done(function(response) {
+                    alert(response); // 성공 메시지 출력
+                    // 서버 응답에 따라 적절한 처리를 수행할 수 있습니다.
+                    // 예를 들어 알림 목록을 다시 가져와서 업데이트하는 등의 작업을 수행할 수 있습니다.
+                })
+                .fail(function(response) {
+                    alert(response); // 오류 메시지 출력
+                });
+        }
+
 
     });
 
@@ -617,7 +667,7 @@
             success: function (data) {
                 removeToken();
                 alert("로그아웃 성공");
-                window.location.reload();
+                window.location.href="/main";
             },
             error: function () {
                 alert("로그아웃 실패");
