--- a/src/main/resources/templates/boards.html
+++ b/src/main/resources/templates/boards.html
@@ -683,7 +683,7 @@
 <script>
 
     function gotoMain() {
-        window.location.href = "/api/posts";
+        window.location.href = "/main";
     }
 
     $("#datepicker").datepicker({
@@ -1045,8 +1045,6 @@
     function redirectToLoginPage() {
         window.location.href = "/api/auth/login-page";
     }
-
-
 
 </script>
 
