--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -41,7 +41,7 @@
         <h1> Let's Collaborate with us. </h1>
         <h2> Study And Take the exam with other ones. </h2>
         <h2> Join a project with nice people. </h2>
-        <a href="/main"> >> Go To Join </a>
+<!--        <a href="/main"> >> Go To Join </a>-->
     </div>
 </div>
 
