--- a/src/main/resources/templates/category.html
+++ b/src/main/resources/templates/category.html
@@ -21,7 +21,13 @@
 
 
   <style>
-    /* 수연님 상단바 css 추가 */
+    #cardArea {
+      width: 17%;
+      margin: 1%;
+      height: -webkit-fill-available;
+    }
+
+    /* 상단바 css 추가 */
     @font-face {
       font-family: 'TheJamsil5Bold';
       src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2302_01@1.0/TheJamsil5Bold.woff2') format('woff2');
@@ -46,37 +52,16 @@
       align-items: center; /* 세로 가운데 정렬 추가 */
     }
 
-    /* 배경 서식 */
-    #stars-container {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      pointer-events: none;
-      z-index: -1;
-    }
-
-    @keyframes twinkle {
-      0%, 100% {
-        opacity: 0.5;
-      }
-      50% {
-        opacity: 0.7;
-      }
-    }
-
     /* header 부분 - only 제목 (코끼리) */
     .header {
       color: #1a1515;
-      height: 15%;
+      height: 15vh;
       width: 100%;
       background-color: transparent;
       text-align: center;
       display: flex;
       align-items: center;
       justify-content: center;
-      margin-top: 4%;
     }
 
     button {
@@ -116,6 +101,7 @@
       justify-content: end;
       align-items: center;
     }
+
 
     /* 알림 */
     .notification-icon {
@@ -218,23 +204,38 @@
 
     /* bottom 부분 */
     .bottom {
-      height: 85%;
-      padding: 20px;
+      height: 85vh;
       background-color: transparent;
       text-align: center;
       display: flex;
       flex-direction: column;
-      justify-content: space-between;
-      margin: 2%;
-      width: 150%;
+      align-items: center;
+      width: 100%;
     }
 
     /* bottom one 부분 - 카테고리 text & 게시글 생성 버튼*/
     .bottomone {
-      margin: 1% 3%;
-      height: 5%;
+      height: 15%;
       width: 100%;
       display: flex;
+      flex-direction: row;
+    }
+
+    .bottomtwo {
+      height: 70%;
+      width: 80%;
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      justify-content: center;
+    }
+
+    .bottomthree {
+      height: 15%;
+      width: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
     }
 
     .bottomonewrapper {
@@ -248,7 +249,6 @@
 
     .text-center {
       font-size: 1.8em;
-      padding-left: 20px;
       height: 100%;
       width: 18%;
       display: flex;
@@ -257,7 +257,6 @@
     }
 
     .button-center {
-      padding-right: 5%;
       width: 20%;
       height: 100%;
       display: flex;
@@ -269,28 +268,23 @@
       background-color: #e6e6e6;
     }
 
-    /*bottom two*/
-    .bottomtwo {
-      height: 100%;
-      width: 100%;
-      display: flex;
-      justify-content: center;
-      align-items: center;
+    .bottomtwo::-webkit-scrollbar {
+      margin-left: 5px;
+      width: 10px;
     }
 
-    .bottomwindows {
-      width: 80%;
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: flex-start;
-      align-content: flex-start;
+    .bottomtwo::-webkit-scrollbar-track {
+      background-color: transparent;
     }
 
-    .bottomthree {
-      height: 10%;
-      display: flex;
-      justify-content: center;
-      align-items: center;
+    .bottomtwo::-webkit-scrollbar-thumb {
+      border-radius: 2px;
+      background-color: #c4c4c4;
+    }
+
+    .bottomtwo::-webkit-scrollbar-button {
+      width: 0;
+      height: 0;
     }
 
     /*bottom3*/
@@ -299,6 +293,10 @@
       display: flex;
       align-items: center;
       justify-content: center;
+    }
+
+    ul {
+      margin: 0;
     }
 
     .pagination {
@@ -321,7 +319,6 @@
       border-color: #e6e6e6;
     }
 
-
     /*하단 게시판*/
     .list-group-item {
       display: flex;
@@ -335,6 +332,14 @@
 
     .list-group-item span:nth-child(2) {
       width: 35%;
+    }
+
+    .badge-bg-primary-rounded-pill {
+      width: 15%;
+    }
+
+    .bg-primary {
+      background-color: #C8D9EB !important;
     }
 
     a {
@@ -378,60 +383,130 @@
     }
 
 
-    /* 현중님 CSS */
-    body {
-      font-family: 'IBM Plex Sans KR', sans-serif;
-    }
-
-    #search-bar {
-      width: 25%;
+    /* 아래는 건욱님 css 코드 */
+    .feature-container {
+      width: 16%;
       display: flex;
+      flex-direction: column;
+      padding: 20px;
     }
 
-    #search-input {
-      padding: 2%;
-      width: 80%;
-      height: 37px;
+    .feature {
+      background-color: white;
+      border: 1px solid #ddd;
+      padding: 1px 10px;
+      margin: 0.8em;
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+      cursor: pointer;
+      font-size: 15px;
+      text-align: center;
     }
 
-    .container {
-      width: 100%;
+    /* 새로 추가한 스타일 */
+    .user-info-container {
+      box-sizing: unset;
+      display: flex;
+      flex-direction: column; /* 세로 정렬로 변경 */
+      justify-content: flex-start;
+      align-items: center; /* 가로 정렬을 중앙에서 시작하도록 변경 */
+      width: 50%;
       height: 100vh;
+      background-color: white;
+      border: 1px solid #ddd;
+      margin-left: 10%;
+      padding: 20px;
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+      /*      position: fixed;
+            top: 55%; !* 55%에서 50%로 변경 *!
+            left: 50%;
+            transform: translate(-50%, -50%);*/
+    }
+
+    .user-info {
+      padding: 10px;
+      background-color: #f9f9f9;
+      border: 1px solid #ddd;
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+      border-radius: 5px;
       display: flex;
       align-items: center;
-      justify-content: center;
+      margin: 5px 0;
+      width: 90%;
     }
 
-    .pagination {
+    /* 수정 및 삭제 버튼 스타일 */
+    .edit-delete-buttons {
+      margin-left: auto; /* 우측으로 정렬 */
+      margin-top: auto;
       display: flex;
-      align-items: center;
-      background: transparent;
-      color: #410358;
-      padding: 10px 40px;
-      border-radius: 6px;
+      flex-direction: row;
     }
 
-    /* CSS 코드 */
-    .paging-ul {
-      /* 리스트 아이템들을 가로로 나열 */
+    .edit-delete-buttons button {
+      margin-left: 5px;
+      margin-top: 5px;
+      padding: 5px 15px;
+      font-size: 16px;
+      cursor: pointer;
+    }
+
+    .user-checkbox {
+      margin-right: 10px;
+    }
+
+    .user-info-list {
       display: flex;
-      flex-direction: row; /* 가로 방향으로 정렬 */
-      list-style-type: none; /* 기본 리스트 스타일 제거 */
-      padding: 0; /* 내부 간격 제거 */
+      flex-direction: column; /* 항목을 수직으로 쌓습니다 */
+      max-height: 90vh; /* 컨텐츠의 최대 높이 설정 */
+      overflow-y: auto; /* 컨텐츠가 넘칠 때 수직 스크롤바를 추가합니다 */
+      gap: 10px;
+      width: 80%;
+      justify-content: flex-start; /* 요소들을 왼쪽 정렬로 유지 */
+      align-items: flex-start; /* 요소들을 위쪽 정렬로 유지 */
     }
 
-    /* 각 리스트 아이템의 스타일 */
-    .paging-ul li {
-      margin-right: 10px; /* 리스트 아이템 사이의 간격 설정 */
+    .mark-all-read-button {
+      position: absolute;
+      top: 10px; /* 버튼 위치 조정 */
+      right: 10px; /* 버튼 위치 조정 */
+      padding: 1px 4px;
+      font-size: 12px;
+      z-index: 9999; /* 다른 요소보다 앞에 표시되도록 설정 */
     }
 
-    /* 버튼 스타일(옵션) */
-    .btn1 {
-      /* 버튼 스타일 지정 */
+    /*!* 각 항목 사이의 위아래 간격을 설정합니다. *!*/
+    /*#post-list ul li {*/
+    /*    margin-top : 50px;*/
+    /*    margin-bottom: 40px;*/
+    /*}*/
+
+    /*!* 제목 스타일을 수정하여 점을 없앱니다. *!*/
+    /*#post-list ul li h2::before {*/
+    /*    content: "제목 : "; !* 제목 앞에 추가할 내용 *!*/
+    /*    font-weight: normal; !* 기본 글꼴 두께로 변경 *!*/
+    /*}*/
+
+    /*!* 카테고리 스타일을 수정하여 점을 없앱니다. *!*/
+    /*#post-list ul li h3::before {*/
+    /*    content: "카테고리 : "; !* 카테고리 앞에 추가할 내용 *!*/
+    /*    font-weight: normal; !* 기본 글꼴 두께로 변경 *!*/
+    /*}*/
+
+    /*!* 작성날짜 스타일을 수정하여 점을 없앱니다. *!*/
+    /*#post-list ul li h5::before {*/
+    /*    content: "작성날짜 : "; !* 작성날짜 앞에 추가할 내용 *!*/
+    /*    font-weight: normal; !* 기본 글꼴 두께로 변경 *!*/
+    /*}*/
+
+
+    h1 {
+      font-size: 35px; /* 원하는 크기로 조정하세요 */
     }
 
 
   </style>
+
+
 </head>
 
 <body>
@@ -535,11 +610,11 @@
 
       <!--검색 창-->
       <div id="search-bar">
-        <input type="text" id="search-input" placeholder="게시글 제목 검색">
+        <input type="text" id="search-input" placeholder="게시글 제목 검색"
+               style="height: 34px; padding:10px;">
         <button onclick="searchByTitle()" style="
                 background-color: #e6e6e6; color: #1a1313;
-                border:none;
-    padding: 1%;" class="btn btn-primary">검색
+                border:none; margin-left: 10px;" class="btn btn-primary">검색
         </button>
       </div>
 
@@ -554,26 +629,50 @@
     </div>
   </div>
 
-  <!--게시글 목록 코드-->
-  <div>
-    <ol class="list-group list-group" style="width: 50%;
-margin-left: 25%; margin-top: 2%;">
-      <li class="list-group-item d-flex justify-content-between align-items-start"
-          th:each="post, postIndex : ${posts}">
-        <div class="fw-bold-left" th:text="${postIndex.index + 1}"></div>
-        <div class="ms-3 me-auto" style="
-    text-align: left;
-">
-          <a th:href="@{/api/posts/{postId}(postId=${post.id})}">
-            <div class="fw-bold-left" th:text="|제목 : ${post.title}|"></div>
-            <span
-                th:text="|내용 : ${post.content.length() > 10 ? #strings.substring(post.content, 0, 10) + '...' : post.content}|"></span>
-          </a>
-        </div>
-        <span class="badge bg-primary rounded-pill" style="font-size: 15px; width: 10%;"
-              th:text="|조회수 : ${post.view_cnt}|"></span>
-      </li>
-    </ol>
+  <div class="bottomtwo">
+    <!--게시글 목록 코드-->
+    <div class="card" id="cardArea" th:each="post, postIndex : ${posts}">
+      <div class="card-body" style="text-align: left;">
+        <a th:href="@{/api/posts/{postId}(postId=${post.id})}">
+          <h5 class="card-title" th:text="${post.title}"> 스터디원 구함 </h5>
+          <h6 class="card-subtitle mb-3 text-body-secondary"
+              th:text="|View : ${post.view_cnt}|">
+            View: 15</h6>
+          <p class="card-text"
+             th:text="|${post.content.length() > 50 ? #strings.substring(post.content, 0, 50) + '...' : post.content}|"
+          >Some quick example text to build on the card title ...</p>
+        </a>
+        <p class="card-link" style="
+                margin: revert; text-align: right; margin-top: 95%;"
+           th:text="|${post.nickname}|"></p>
+        <p class="card-link" style="
+    font-size: small;
+    text-align: right;
+"
+           th:text="${#temporals.format(post.createdAt, 'MM/dd HH:mm:ss')}">11/11 11:11:11</p>
+      </div>
+    </div>
+
+    <!--    <div>-->
+    <!--      <ol class="list-group list-group" style="width: 65%;-->
+    <!--margin-left: 17%; margin-top: 2%;">-->
+    <!--        <li class="list-group-item d-flex justify-content-between align-items-start"-->
+    <!--            th:each="post, postIndex : ${posts}">-->
+    <!--          <div class="fw-bold-left" th:text="${postIndex.index + 1}"></div>-->
+    <!--          <div class="ms-3 me-auto" style="-->
+    <!--    text-align: left;-->
+    <!--">-->
+    <!--            <a th:href="@{/api/posts/{postId}(postId=${post.id})}">-->
+    <!--              <div class="fw-bold-left" th:text="|제목 : ${post.title}|"></div>-->
+    <!--              <span-->
+    <!--                  th:text="|내용 : ${post.content.length() > 10 ? #strings.substring(post.content, 0, 10) + '...' : post.content}|"></span>-->
+    <!--            </a>-->
+    <!--          </div>-->
+    <!--          <span class="badge bg-primary rounded-pill" style="font-size: 15px; width: 10%;"-->
+    <!--                th:text="|조회수 : ${post.view_cnt}|"></span>-->
+    <!--        </li>-->
+    <!--      </ol>-->
+    <!--    </div>-->
   </div>
 
   <!--페이징 처리 코드 -->
@@ -631,9 +730,8 @@ margin-left: 25%; margin-top: 2%;">
     const searchInput = document.getElementById("search-input").value;
     console.log(category);
 
-
     // 검색 결과 페이지로 이동
-    window.location.replace("/api/posts/categories/" +category +"/titles?title=" + searchInput);
+    window.location.replace("/api/posts/categories/" + category + "/titles?title=" + searchInput);
   }
 
   // header js 추가
@@ -683,7 +781,10 @@ margin-left: 25%; margin-top: 2%;">
     };
 
     // 페이지 로드 시 사용자 정보를 가져와서 알림 데이터를 불러옴
-    fetchUserInfo();
+    const token = Cookies.get('Authorization');
+    if (token) { // 토큰 있을 경우
+      fetchUserInfo();
+    }
 
     // 알림 목록 업데이트 함수
     const updateNotificationList = () => {
@@ -879,7 +980,7 @@ margin-left: 25%; margin-top: 2%;">
       success: function (data) {
         removeToken();
         alert("로그아웃 성공");
-        window.location.href = "/";
+        window.location.href = "/main";
       },
       error: function () {
         alert("로그아웃 실패");
