FEAT : 카테고리 검색 페이지에서 생성 버튼 매핑

--- a/src/main/resources/templates/searchedPage.html
+++ b/src/main/resources/templates/searchedPage.html
@@ -736,6 +736,12 @@
 </div>-->
 
 <script>
+  // 게시글 생성 버튼 클릭 이벤트 핸들러
+  $("#create-post-button").click(function () {
+    // 게시글 생성 페이지로 이동
+    window.location.replace("/api/post-page");
+  });
+
   // header js 코드 추가
   $(document).ready(function () {
     pageSetting();
