REFACTOR : 병합 후 오류 수정
1. 메인 페이지에 게시글 안보이는 오류 (HomeViewController.java 수정)
2. PostCommentResponseDto, PostResponseDto 클래스에 userId 필드 중복 제거
3. updatePost.html th:unless 조건 수정
4. [Category.java] 클래스 코드 수정

--- a/src/main/resources/templates/updatePost.html
+++ b/src/main/resources/templates/updatePost.html
@@ -382,7 +382,7 @@
             </div>
             <div class="form-group" id = "form-recruitment">
                 <input type="hidden" id="postId2" name="postId2" value="${updatePost.id}">
-                <div class="form-group" th:if="${updatePost.category != updatePost.category.PREVIOUS_EXAM}">
+                <div class="form-group" th:unless="${updatePost.category == '문제 은행' || updatePost.category == '자유 게시판'}">
                     <label for="completed">모집 현황</label>
                     <select id="completed" name="completed" class="input-field">
                         <option value="true">모집 완료</option>
