--- a/src/main/resources/templates/chatRooms.html
+++ b/src/main/resources/templates/chatRooms.html
@@ -505,7 +505,7 @@
       data: JSON.stringify({ username : selectedResult.username }),
       success: function (data) {
         console.log(data);
-        window.location.href = data;
+        // window.location.href = "http://localhost:8080" + data;
       }, error: function () {
 
       }
